--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   },
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack --mode development",
-    "build": "cross-env NODE_ENV=production webpack"
+    "build": "cross-env NODE_ENV=production webpack",
+    "start": "cross-env NODE_ENV=production webpack serve --open --mode development",
+    "watch": "cross-env NODE_ENV=development webpack --mode development --watch"
   },
   "eslintConfig": {
     "extends": [
@@ -45,6 +47,7 @@
     "node-sass": "^7.0.1",
     "sass-loader": "^13.0.2",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.10.1"
   }
 }
